--- a/src/pages/st.astro
+++ b/src/pages/st.astro
@@ -107,7 +107,11 @@ import ArrowButton from "../components/ArrowButton.astro";
           <input id="custom-engine" placeholder="Custom Search Engine" class="w-full outline-none bg-transparent text-text text-sm" />
         </div>
       </SettingsCard>
-      <SettingsCard description="Customize the theme of the site and choose from a variety of particles to customize the site further." title="Customization" Icon={SwatchBook} />
+      <SettingsCard
+        description="Customize the theme of the site and choose from a variety of particles to customize the site further."
+        title="Customization"
+        Icon={SwatchBook}
+      />
       <!-- Information Card -->
       <div class="w-full bg-settings rounded-lg p-5 shadow-inner border-accent-secondary border-[2.5px]">
         <div class="flex items-center gap-2">
