chore: switch to astro:page-load + formatted

--- a/src/pages/st.astro
+++ b/src/pages/st.astro
@@ -2,7 +2,7 @@
 import Dropdown from "@/components/Dropdown.astro";
 import SettingsCard from "@/components/SettingsCard.astro";
 import Layout from "@/layouts/Main.astro";
-import { Atom, ExternalLink, EyeOff, Info, Search, Siren, SwatchBook } from "lucide-astro";
+import { ExternalLink, EyeOff, Info, Search, Siren, SwatchBook } from "lucide-astro";
 import ArrowButton from "../components/ArrowButton.astro";
 ---
 
@@ -131,5 +131,5 @@ import ArrowButton from "../components/ArrowButton.astro";
       </div>
     </section>
   </div>
-  <script is:inline src="/src/lib/settings.ts?v=4"></script>
+  <script is:inline src="/src/lib/settings.ts"></script>
 </Layout>
