--- a/src/pages/st.astro
+++ b/src/pages/st.astro
@@ -113,7 +113,7 @@ import ArrowButton from "../components/ArrowButton.astro";
         Icon={SwatchBook}
       />
       <!-- Information Card -->
-      <div class="w-full bg-settings rounded-lg p-5 shadow-inner border-accent-secondary border-[2.5px]">
+      <div class="w-full bg-background-settings rounded-lg p-5 shadow-inner border-accent-secondary border-[2.5px]">
         <div class="flex items-center gap-2">
           <Info class="size-6" />
           <h3 class="font-extrabold text-2xl mt-0">Information</h3>
