--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -1,10 +1,11 @@
 ---
 import Obfuscated from "@/components/Obfuscated.astro";
-import { AppWindow, Gamepad2, LayoutGrid, Settings2, Wrench } from "lucide-astro";
+import { AppWindow, Gamepad2, LayoutGrid, Menu, Settings2, Wrench } from "lucide-astro";
 import Layout from "./Layout.astro";
+
 const navLinks = [
-  { href: "/ap", text: "Apps", Icon: LayoutGrid },
   { href: "/ga", text: "Games", Icon: Gamepad2 },
+  { href: "/ap", text: "Apps", Icon: LayoutGrid },
   { href: "/to", text: "Tools", Icon: Wrench },
   { href: "/tb", text: "Tabs", Icon: AppWindow },
   { href: "/st", text: "Settings", Icon: Settings2 },
@@ -12,15 +13,18 @@ const navLinks = [
 ---
 
 <Layout>
-  <nav class="flex flex-row justify-between backdrop-blur-lg bg-background-secondary border-none w-[98vw] h-20 px-6 rounded-xl mx-4 mt-4 fixed top-0 z-[99999]">
-    <a href="/" class="uppercase flex items-center hover:-translate-y-1 hover:scale-105 duration-150 text-6xl font-black">in</a>
-    <ul class="flex flex-row items-center text-2xl gap-6 font-semibold">
+  <nav class="flex flex-row justify-between backdrop-blur-lg bg-background-secondary border-none w-[98vw] h-20 px-6 rounded-xl mx-4 mt-4 fixed top-0 z-[99999] shadow-lg">
+    <a href="/" class="uppercase flex items-center text-primary hover:scale-105 duration-150 text-6xl font-black">in</a>
+    <button id="hamburger" class="text-3xl text-primary focus:outline-none hover:scale-110 transition-transform">
+      <Menu class="size-8" />
+    </button>
+    <ul id="nav" class="w-48 flex flex-col absolute top-20 right-0 bg-background-secondary border border-accent rounded-lg p-4 transition-all duration-200 shadow-md">
       {
         navLinks.map((link) => (
           <li>
-            <a href={link.href} class="flex-row inline-flex gap-2 items-center hover:scale-105 hover:-translate-y-1 duration-150">
+            <a href={link.href} class="font-medium flex-row inline-flex gap-2 items-center hover:scale-105 hover:bg-accent hover:rounded-md p-3">
               <link.Icon class="size-5" />
-              <Obfuscated text={link.text} class={Astro.url.pathname.startsWith(link.href) ? "underline" : ""} />
+              <Obfuscated text={link.text} />
             </a>
           </li>
         ))
