--- a/src/pages/to.astro
+++ b/src/pages/to.astro
@@ -1,9 +1,8 @@
 ---
 import AssetCard from "@/components/AssetCard.astro";
-import Dropdown from "@/components/Dropdown.astro";
 import Layout from "@/layouts/Main.astro";
 import { ASSET_URL, type Asset } from "@/lib/asset";
-import { Wrench, PlusCircle } from "lucide-astro";
+import { PlusCircle, Wrench } from "lucide-astro";
 export const prerender = false;
 const tools: Asset[] = await (await fetch(`${ASSET_URL}/json/tools.json`)).json();
 const customTools = (Astro.cookies.get("asset.tool")?.json() as Asset[]) ?? [];
