--- a/src/pages/st.astro
+++ b/src/pages/st.astro
@@ -2,7 +2,7 @@
 import Dropdown from "@/components/Dropdown.astro";
 import SettingsCard from "@/components/SettingsCard.astro";
 import Layout from "@/layouts/Main.astro";
-import { ExternalLink, EyeOff, Info, Search, Siren, SwatchBook } from "lucide-astro";
+import { ExternalLink, EyeOff, Info, Menu, Search, Siren, SwatchBook } from "lucide-astro";
 import ArrowButton from "../components/ArrowButton.astro";
 ---
 
@@ -107,11 +107,16 @@ import ArrowButton from "../components/ArrowButton.astro";
           <input id="custom-engine" placeholder="Custom Search Engine" class="w-full outline-none bg-transparent text-text text-sm" />
         </div>
       </SettingsCard>
-      <SettingsCard
-        description="Customize the theme of the site and choose from a variety of particles to customize the site further."
-        title="Customization"
-        Icon={SwatchBook}
-      />
+      <SettingsCard description="Choose between a hamburger menu and a standard menu. (Default: Hamburger)" title="Menu" Icon={Menu}>
+        <Dropdown
+          id="menu"
+          text="Choose Menu"
+          menu={[
+            { value: "Hamburger", text: "Hamburger Menu" },
+            { value: "Standard", text: "Standard" },
+          ]}
+        />
+      </SettingsCard>
       <!-- Information Card -->
       <div class="w-full bg-background-settings rounded-lg p-5 shadow-inner border-accent-secondary border-[2.5px]">
         <div class="flex items-center gap-2">
@@ -129,6 +134,13 @@ import ArrowButton from "../components/ArrowButton.astro";
           <a class="font-medium" href="https://docs.gointerstellar.app/">Documentation</a>.
         </p>
       </div>
+    </section>
+    <div>
+      <h1 class="mt-2 font-extrabold text-5xl">Customization</h1>
+    </div>
+    <section class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5 p-4 justify-center">
+      <SettingsCard description="Customize the theme of the site." title="UI" Icon={SwatchBook} />
+      <SettingsCard description="Customize the theme of the site." title="Themes" Icon={SwatchBook} />
     </section>
   </div>
   <script is:inline src="/src/lib/settings.ts"></script>
