--- a/src/pages/st.astro
+++ b/src/pages/st.astro
@@ -107,7 +107,7 @@ import ArrowButton from "../components/ArrowButton.astro";
           <input id="custom-engine" placeholder="Custom Search Engine" class="w-full outline-none bg-transparent text-text text-sm" />
         </div>
       </SettingsCard>
-      <SettingsCard description="Choose between a hamburger menu and a standard menu. (Default: Hamburger)" title="Menu" Icon={Menu}>
+      <!-- <SettingsCard description="Choose between a hamburger menu and a standard menu. (Default: Hamburger)" title="Menu" Icon={Menu}>
         <Dropdown
           id="menu"
           text="Choose Menu"
@@ -116,7 +116,7 @@ import ArrowButton from "../components/ArrowButton.astro";
             { value: "Standard", text: "Standard" },
           ]}
         />
-      </SettingsCard>
+      </SettingsCard> -->
       <!-- Information Card -->
       <div class="w-full bg-background-settings rounded-lg p-5 shadow-inner border-accent-secondary border-[2.5px]">
         <div class="flex items-center gap-2">
