improved some visual things

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -37,7 +37,7 @@ import { ViewTransitions } from "astro:transitions";
     </script>
     <script src="@/lib/global.ts"></script>
   </head>
-  <body>
+  <body class="flex-1 flex flex-col items-center justify-center px-4 min-w-full">
     <slot />
   </body>
 </html>
