--- a/src/pages/ga.astro
+++ b/src/pages/ga.astro
@@ -9,9 +9,10 @@ const customGames = (Astro.cookies.get("asset.game")?.json() as Asset[]) ?? [];
 ---
 
 <Layout>
-  <div class="flex justify-center py-8 flex-col items-center gap-4">
+  <div class="flex justify-center py-8 flex-col items-center gap-4 mt-24">
     <div class="text-4xl font-bold text-text inline-flex">
-      <Gamepad2 class="size-12 mr-2" />
+      <Gamepad2 class="transform -translate-y-1 size-12 mr-2" />
+      <!-- <Gamepad2 class="size-12 mr-2" /> -->
       Games
     </div>
     <div class="flex px-4 py-3 rounded-md border-2 border-border overflow-hidden w-1/4 h-14 mx-auto">
