--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,24 @@
 ---
 import Layout from "@/layouts/Main.astro";
+import { Search } from "lucide-astro";
 ---
 
 <script src="@/lib/cloak.ts"></script>
 <Layout>
-  <div class="flex h-full flex-col overflow-hidden">
-    <h3 class="flex text-8xl font-black uppercase place-content-center mt-40 hover:scale-105 hover:-translate-y-1 duration-150">Interstellar</h3>
-    <div id="form" class="flex mt-4 flex-col items-center justify-center gap-4">
-      <input class="h-16 rounded-md w-1/2 py-3 px-4 placeholder-text leading-tight focus:outline-none bg-interactive border-border" placeholder="Search" id="search" />
+  <div class="flex-1 flex flex-col items-center justify-center px-4">
+    <div class="text-center space-y-2 mb-6">
+      <h3 class="flex text-8xl font-black uppercase place-content-center hover:scale-105 hover:-translate-y-1 duration-150">Interstellar</h3>
+    </div>
+    <!-- <h3 class="flex text-8xl font-black uppercase place-content-center mt-40 hover:scale-105 hover:-translate-y-1 duration-150">Interstellar</h3> -->
+     
+    <div class="items-center justify-center w-full max-w-screen-md">
+      <form class="relative">
+        
+        <Search class="absolute left-3 top-1/2 transform -translate-y-1/2 h-5 w-5 text-gray-500"/>
+        <input class="search h-15 w-full border px-3 text-sm pl-10 py-6 bg-[#333333] border-[#444444] text-gray-200 placeholder-gray-500 placeholder:text- focus:outline-none rounded-xl" placeholder="Search the cosmos..." type="search">
+        
+        <!--<button class="text-sm font-medium transition-colors h-11 px-4 absolute right-2 top-1/2 transform -translate-y-1/2 bg-indigo-600 hover:bg-indigo-700 text-gray-200 rounded-xl" type="submit">Search</button>-->
+      </form>
     </div>
   </div>
 </Layout>
