--- a/src/pages/tb.astro
+++ b/src/pages/tb.astro
@@ -14,7 +14,7 @@ import { ArrowLeft, ArrowRight, Home, Loader2, Maximize2, Plus, RotateCw, Star }
   </div>
   <div class="bg-background-secondary h-12 flex items-center justify-between px-4">
     <div class="flex items-center space-x-4">
-      <a href="/" id="home" title="Home Page.">
+      <a href="/" id="home" title="Home Page">
         <Home class="w-5 h-5 cursor-pointer" />
       </a>
       <button title="Click to go back." id="back">
