--- a/src/pages/st.astro
+++ b/src/pages/st.astro
@@ -2,7 +2,7 @@
 import Dropdown from "@/components/Dropdown.astro";
 import SettingsCard from "@/components/SettingsCard.astro";
 import Layout from "@/layouts/Main.astro";
-import { ExternalLink, EyeOff, Info, Settings2, Search, Siren, SwatchBook } from "lucide-astro";
+import { ExternalLink, EyeOff, Info, Search, Settings2, Siren, SwatchBook } from "lucide-astro";
 import ArrowButton from "../components/ArrowButton.astro";
 ---
 
