added text placeholder var, updated home searchbar and nav

--- a/src/components/Dropdown.astro
+++ b/src/components/Dropdown.astro
@@ -14,7 +14,7 @@ const { id, text, menu } = Astro.props;
     data-dropdown-toggle={id}
     data-dropdown-delay="500"
     data-dropdown-trigger="hover"
-    class="mt-2 text-white bg-dropdown focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center"
+    class="mt-2 text-text bg-dropdown focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center"
     type="button"
   >
     {text}
