--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -1,12 +1,11 @@
 ---
 import Obfuscated from "@/components/Obfuscated.astro";
-import { AppWindow, Gamepad2, LayoutGrid, Menu, Settings2, Wrench } from "lucide-astro";
+import { AppWindow, Gamepad2, LayoutGrid, Menu, Settings2 } from "lucide-astro";
 import Layout from "./Layout.astro";
 
 const navLinks = [
   { href: "/ga", text: "Games", Icon: Gamepad2 },
   { href: "/ap", text: "Apps", Icon: LayoutGrid },
-  { href: "/to", text: "Tools", Icon: Wrench },
   { href: "/tb", text: "Tabs", Icon: AppWindow },
   { href: "/st", text: "Settings", Icon: Settings2 },
 ];
