chore: preload global.ts

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,6 +13,8 @@ import { ViewTransitions } from "astro:transitions";
     <link id="icon" rel="shortcut icon" href="/assets/media/favicons/default.png" />
     <title>Home</title>
     <ViewTransitions />
+    <link rel="preload" href="@/lib/global.ts" as="script" />
+    <script src="@/lib/global.ts"></script>
     <script is:inline src="/assets/bundled/v.bndl.js" defer></script>
     <script is:inline src="/assets/bundled/v.cnfg.js" defer></script>
     <script is:inline>
@@ -35,7 +37,6 @@ import { ViewTransitions } from "astro:transitions";
       ]);
       await navigator.serviceWorker.register("/sw.js").then(() => console.log("uv registered"));
     </script>
-    <script src="@/lib/global.ts"></script>
   </head>
   <body>
     <slot />
