remove cloaking from file and move to global

--- a/src/pages/st.astro
+++ b/src/pages/st.astro
@@ -82,7 +82,7 @@ import ArrowButton from "../components/ArrowButton.astro";
           <input id="custom-icon" placeholder="Custom Tab Icon" class="w-full outline-none bg-transparent text-text text-sm" />
         </div>
       </SettingsCard>
-      <SettingsCard description="Quickly open another website that will replace the current website by pressing a button." title="Panic Key" Icon={Siren}>
+      <SettingsCard description="Quickly open another website that will replace the current website by pressing a button. (This is also the site that is opened when you cloak the site.)" title="Panic Key" Icon={Siren}>
         <div class="flex px-4 py-3 rounded-md border-2 border-border overflow-hidden max-w-md mx-auto mt-2 mb-2">
           <input id="key" placeholder="Panic Key" class="w-full outline-none bg-transparent text-text text-sm" />
         </div>
